--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -59,7 +59,7 @@
               <div>
                 <a href="#">
                   <button
-                    class="bg-dark rounded-pill text-white px-2"
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
                     lass="btn btn-primary"
                     data-bs-toggle="modal"
                     data-bs-target="#exampleModal"
