--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -52,7 +52,7 @@
               <div>
                 <img
                   src="/assets/images/delete-icon.svg"
-                  class="img-fluid"
+                  class="img-fluid me-3"
                   alt=""
                 />
               </div>
