--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -49,10 +49,10 @@
                   class="border-0 social-ph"
                 />
               </div>
-              <div>
+              <div class="me-4">
                 <img
                   src="/assets/images/delete-icon.svg"
-                  class="img-fluid me-3"
+                  class="img-fluid"
                   alt=""
                 />
               </div>
