--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -49,7 +49,7 @@
                   class="border-0 social-ph"
                 />
               </div>
-              <div class="me-4">
+              <div>
                 <img
                   src="/assets/images/delete-icon.svg"
                   class="img-fluid"
@@ -93,7 +93,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -127,7 +127,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -161,7 +161,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -191,7 +191,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -221,7 +221,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -251,7 +251,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
@@ -285,7 +285,7 @@
                   alt=""
                 />
               </div>
-              <div class="me-3">
+              <div>
                 <a href="#">
                   <button
                     class="bg-dark border border-1 rounded-pill text-white px-2"
