--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -429,7 +429,10 @@
               </div>
 
               <div class="text-center pb-4">
-                <a href="https://www.facebook.com/username.haseeb">
+                <a
+                  href="https://www.facebook.com/username.haseeb"
+                  target="_blank"
+                >
                   <button
                     class="bg-primary rounded-pill text-center text-white border-0 py-3 px-5"
                   >
