--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -116,7 +116,9 @@
                     />
                   </div>
                   <div>
-                    <button class="bg-dark rounded-pill text-white px-3">
+                    <button
+                      class="bg-dark border border-dark rounded-pill text-white px-3"
+                    >
                       Add
                     </button>
                   </div>
@@ -146,7 +148,9 @@
                     />
                   </div>
                   <div>
-                    <button class="bg-dark rounded-pill text-white px-3">
+                    <button
+                      class="bg-dark border border-dark rounded-pill text-white px-3"
+                    >
                       Add
                     </button>
                   </div>
@@ -176,7 +180,9 @@
                     />
                   </div>
                   <div>
-                    <button class="bg-dark rounded-pill text-white px-3">
+                    <button
+                      class="bg-dark border border-dark rounded-pill text-white px-3"
+                    >
                       Add
                     </button>
                   </div>
@@ -206,7 +212,9 @@
                     />
                   </div>
                   <div>
-                    <button class="bg-dark rounded-pill text-white px-3">
+                    <button
+                      class="bg-dark border border-dark rounded-pill text-white px-3"
+                    >
                       Add
                     </button>
                   </div>
@@ -236,7 +244,9 @@
                     />
                   </div>
                   <div>
-                    <button class="bg-dark rounded-pill text-white px-3">
+                    <button
+                      class="bg-dark border border-dark rounded-pill text-white px-3"
+                    >
                       Add
                     </button>
                   </div>
