--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -458,7 +458,7 @@
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-blue-color shadow px-3 py-md-3 py-3 rounded-pill text-white border-0"
+                    class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
                   >
                     Save Changes
                   </button>
@@ -516,7 +516,7 @@
               character.
             </p>
 
-            <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
+            <div class="d-flex my-4 mx-3 gap-2 justify-content-between">
               <div>
                 <a href="./More.html">
                   <button
@@ -529,7 +529,7 @@
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-blue-color shadow px-3 py-md-3 rounded-pill text-white border-0"
+                    class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
                   >
                     Save Changes
                   </button>
