--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -838,9 +838,7 @@
                   <p class="light-color">Twitter:</p>
                 </div>
                 <div>
-                  <button
-                    class="rounded-pill border-1 border px-3 bg-transparent"
-                  >
+                  <button class="rounded-pill border-1 px-3 bg-transparent">
                     Follow
                   </button>
                 </div>
