--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -415,7 +415,7 @@
     >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content modal-border">
-          <div class="modal-body">
+          <div class="modal-body px-3">
             <div class="d-flex align-items-center justify-content-center py-4">
               <a href="/assets/pages/More.html" class="pe-5">
                 <img
@@ -430,7 +430,7 @@
             <div class="">
               <input
                 type="text"
-                class="form-control rounded-pill py-3 px-4 shadow"
+                class="form-control rounded-pill py-3 px-5 shadow"
                 placeholder="lvsr.io User name "
               />
               <input
