--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -236,7 +236,7 @@
               <div class="text-center pb-4">
                 <a href="#">
                   <button
-                    class="bg-blue-color rounded-pill text-center text-white border-0 py-3 px-5"
+                    class="bg-blue-color shadow rounded-pill text-center text-white border-0 py-3 px-5"
                   >
                     Save Image
                   </button>
