--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -427,7 +427,7 @@
 
               <h6 class="m-0">Account Information</h6>
             </div>
-            <div class="">
+            <div class="px-4">
               <input
                 type="text"
                 class="form-control rounded-pill py-3 px-5 shadow"
@@ -552,91 +552,120 @@
     >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content modal-border">
-          <div class="modal-body w-100">
-            <div class="d-flex align-items-center justify-content-center py-4">
-              <a href="/assets/pages/More.html" class="pe-5">
-                <img
-                  src="/assets/images/less-than-arrow.svg"
-                  class="img-fluid"
-                  alt=""
-                />
-              </a>
-
-              <h6 class="m-0">Subscription settings</h6>
-            </div>
-            <div class="card p-4 shadow plan-card-border">
-              <h6 class="free-text">FREE</h6>
-              <div class="line position-relative">
-                <div class="small-circle position-absolute bg-white shadow">
+          <div class="modal-body">
+            <div class="px-3">
+              <div
+                class="d-flex align-items-center justify-content-center py-4"
+              >
+                <a href="/assets/pages/More.html" class="pe-5">
                   <img
-                    src="/assets/images/blue-small-circle.svg"
+                    src="/assets/images/less-than-arrow.svg"
                     class="img-fluid"
                     alt=""
                   />
+                </a>
+                <h6 class="m-0">Subscription settings</h6>
+              </div>
+              <div class="card p-4 shadow plan-card-border">
+                <h6 class="free-text">FREE</h6>
+                <div class="line position-relative">
+                  <div class="small-circle position-absolute bg-white shadow">
+                    <img
+                      src="/assets/images/blue-small-circle.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <div class="d-flex gap-2 my-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">Limited links</p>
+                  </div>
+                </div>
+                <div class="line"></div>
+                <div class="d-flex gap-2 my-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">Pree selected backgrounds</p>
+                  </div>
+                </div>
+                <div class="line"></div>
+                <div class="d-flex gap-2 mt-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">Pree selected button colors</p>
+                  </div>
                 </div>
               </div>
-              <div class="d-flex gap-2 my-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+              <div class="card p-4 my-3 shadow plan-card-border">
+                <h6 class="free-text">PROFESSIONAL</h6>
+                <div class="line position-relative">
+                  <div class="small-circle position-absolute bg-white shadow">
+                    <img
+                      src="/assets/images/sky-blue-small-circle.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
                 </div>
-                <div>
-                  <p class="light-color m-0">Limited links</p>
+                <div class="d-flex gap-2 my-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">$4.99 per moth</p>
+                  </div>
                 </div>
-              </div>
-              <div class="line"></div>
-              <div class="d-flex gap-2 my-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                <div class="line"></div>
+                <div class="d-flex gap-2 my-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">
+                      Profile customization & control
+                    </p>
+                  </div>
                 </div>
-                <div>
-                  <p class="light-color m-0">Pree selected backgrounds</p>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="d-flex gap-2 mt-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
-                </div>
-                <div>
-                  <p class="light-color m-0">Pree selected button colors</p>
-                </div>
-              </div>
-            </div>
-            <div class="card p-4 my-3 shadow plan-card-border">
-              <h6 class="free-text">PROFESSIONAL</h6>
-              <div class="line position-relative">
-                <div class="small-circle position-absolute bg-white shadow">
-                  <img
-                    src="/assets/images/sky-blue-small-circle.svg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-              </div>
-              <div class="d-flex gap-2 my-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
-                </div>
-                <div>
-                  <p class="light-color m-0">$4.99 per moth</p>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="d-flex gap-2 my-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
-                </div>
-                <div>
-                  <p class="light-color m-0">Profile customization & control</p>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="d-flex gap-2 mt-2">
-                <div class="white-small-circle shadow">
-                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
-                </div>
-                <div>
-                  <p class="light-color m-0">Unlimited links</p>
+                <div class="line"></div>
+                <div class="d-flex gap-2 mt-2">
+                  <div class="white-small-circle shadow">
+                    <img
+                      src="/assets/images/tick.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                  <div>
+                    <p class="light-color m-0">Unlimited links</p>
+                  </div>
                 </div>
               </div>
             </div>
