--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -333,6 +333,8 @@
                   src="/assets/images/cross.svg"
                   class="img-fluid p-1"
                   alt=""
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
                 />
               </div>
               <div class="share-link-picture">
