--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -429,7 +429,7 @@
             <div class="d-flex justify-content-between my-4 px-2">
               <div>
                 <button
-                  class="border-1 border px-3 rounded-pill bg-transparent"
+                  class="border-1 border-dark px-3 rounded-pill bg-transparent"
                 >
                   Copy
                 </button>
