--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -299,7 +299,7 @@
         </div>
         <div class="col-3">
           <div class="text-center">
-            <a href="/assets/pages/AddLinks.html" class="text-decoration-none">
+            <a href="/assets/pages/More.html" class="text-decoration-none">
               <img src="/assets/images/more-tab.svg" class="img-fluid" alt="" />
               <p class="light-color">More</p>
             </a>
