--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -80,13 +80,10 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body border-0">
-                        <strong
-                          >This is the first item's accordion body.</strong
-                        >
-                        It is shown by default, until the collapse plugin adds
-                        the appropriate classes that we use to style each
-                        element. These classes control the overall appearance,
-                        as well
+                        <strong>This is your last 30 days of your data.</strong>
+                        The data collected during the last 30 days is typically
+                        organized, processed, and presented in a manner that is
+                        easily understandable and actionable.
                       </div>
                     </div>
                   </div>
