--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -308,7 +308,11 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div
+                  class=""
+                  data-bs-toggle="modal"
+                  data-bs-target="#DeleteModal"
+                >
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -927,6 +931,110 @@
         </div>
       </div>
     </div>
+
+    <!-- Delete Account Modal -->
+
+    <div
+      class="modal fade"
+      id="DeleteModal"
+      aria-hidden="true"
+      aria-labelledby="exampleModalToggleLabel"
+      tabindex="-1"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body px-3">
+            <p class="light-color px-2 pt-2 text-center m-0">
+              Are you sure you want to delete your account ?
+            </p>
+          </div>
+
+          <div class="d-flex justify-content-between mx-4 mb-4">
+            <div>
+              <a href="/assets/pages/More.html">
+                <button
+                  class="bg-dark shadow px-5 py-3 rounded-pill text-white border-0"
+                >
+                  No
+                </button>
+              </a>
+            </div>
+            <div>
+              <button
+                class="bg-blue-color shadow px-5 py-3 rounded-pill text-white border-0"
+                data-bs-target="#exampleModalToggle2"
+                data-bs-toggle="modal"
+                data-bs-dismiss="modal"
+              >
+                Yes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="modal fade"
+      id="exampleModalToggle2"
+      aria-hidden="true"
+      aria-labelledby="exampleModalToggleLabel2"
+      tabindex="-1"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
+            <p class="px-2 text-center">
+              Your Account has been deleted succesfully !
+            </p>
+            <h6 class="text-center">Thank you for using LSVR</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      href="#exampleModalToggle"
+      role="button"
+      >Open first modal</a
+    >
+    <!-- <div
+      class="modal fade"
+      id="DeleteModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body py-4">
+            <p class="light-color px-4 text-center">
+              Are you sure you want to delete your account ?
+            </p>
+            <div class="d-flex mx-4 gap-2 justify-content-between">
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-success px-5 shadow py-3 rounded-pill text-white border-0"
+                  >
+                    No
+                  </button>
+                </a>
+              </div>
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-danger shadow px-5 py-3 rounded-pill text-white border-0"
+                  >
+                    Yes
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
