--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -402,7 +402,7 @@
               <div class="col-3">
                 <div class="">
                   <img
-                    src="/assets/images/message-circle.svg"
+                    src="/assets/images/messages.svg"
                     class="img-fluid"
                     alt=""
                   />
@@ -416,7 +416,7 @@
                 </div>
               </div>
               <div class="col-3">
-                <div class="">
+                <div class="text-center">
                   <img
                     src="/assets/images/instagram.svg"
                     class="img-fluid"
