--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -20,6 +20,16 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
 
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Add Link Screen</title>
