--- a/assets/pages/ChangeBackground.html
+++ b/assets/pages/ChangeBackground.html
@@ -36,7 +36,15 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- Custom CSS Link -->
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
 
     <link rel="stylesheet" href="/assets/css/style.css" />
 
