--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -13,6 +13,16 @@
       crossorigin="anonymous"
     />
 
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>More</title>
@@ -991,50 +1001,6 @@
         </div>
       </div>
     </div>
-    <a
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      href="#exampleModalToggle"
-      role="button"
-      >Open first modal</a
-    >
-    <!-- <div
-      class="modal fade"
-      id="DeleteModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-body py-4">
-            <p class="light-color px-4 text-center">
-              Are you sure you want to delete your account ?
-            </p>
-            <div class="d-flex mx-4 gap-2 justify-content-between">
-              <div>
-                <a href="./More.html">
-                  <button
-                    class="bg-success px-5 shadow py-3 rounded-pill text-white border-0"
-                  >
-                    No
-                  </button>
-                </a>
-              </div>
-              <div>
-                <a href="./More.html">
-                  <button
-                    class="bg-danger shadow px-5 py-3 rounded-pill text-white border-0"
-                  >
-                    Yes
-                  </button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
