--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -13,6 +13,16 @@
       crossorigin="anonymous"
     />
 
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Share Your Link</title>
@@ -402,7 +412,7 @@
               <div class="col-3">
                 <div class="">
                   <img
-                    src="/assets/images/messages.svg"
+                    src="/assets/images/messagaging.svg"
                     class="img-fluid"
                     alt=""
                   />
