--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -13,6 +13,16 @@
       crossorigin="anonymous"
     />
 
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Insights</title>
