--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           referrerpolicy="no-referrer"
         />
 
+        <!----------------------------------------------- FavIcon -------------------------------------------->
+
+        <link
+          rel="shortcut icon"
+          href="/assets/images/home.svg"
+          type="image/x-icon"
+        />
+
         <link rel="stylesheet" href="/assets/css/style.css" />
 
         <title>LSVR - Home</title>
