--- a/assets/pages/Steppers.html
+++ b/assets/pages/Steppers.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Stepper</title>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
 
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
