--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -12,6 +12,17 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <!----------------------------------------------- FavIcon ------------------------------------------------>
+
+    <link
+      rel="shortcut icon"
+      href="/assets/images/home.svg"
+      type="image/x-icon"
+    />
+
+    <!-------------------------------------------- Custom CSS Link ------------------------------------------->
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Login</title>
