--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -54,11 +54,13 @@
                       <h5 class="card-title text-center m-0">Dan Vittorni</h5>
                     </div>
                     <div>
-                      <img
-                        src="/assets/images/edit-name.svg"
-                        class="img-fluid"
-                        alt=""
-                      />
+                      <a href="#">
+                        <img
+                          src="/assets/images/edit-name.svg"
+                          class="img-fluid"
+                          alt=""
+                        />
+                      </a>
                     </div>
                   </div>
                   <p class="card-text text-center m-0">
@@ -268,55 +270,65 @@
           <!----------------------------------------------- Footer ------------------------------------------------->
         </div>
       </div>
+      <footer class="shadow-lg mt-3">
+        <div class="row d-flex justify-content-center pt-3">
+          <div class="col-3">
+            <div class="text-center">
+              <a
+                href="/assets/pages/AddLinks.html"
+                class="text-decoration-none"
+              >
+                <img
+                  src="/assets/images/link-tab.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <p class="light-color">Links</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <a
+                href="/assets/pages/ChangeBackground.html"
+                class="text-decoration-none"
+              >
+                <img
+                  src="/assets/images/visual-tab.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <p class="light-color">Visuals</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <a href="/assets/pages/insight.html" class="text-decoration-none">
+                <img
+                  src="/assets/images/insight-tab.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <p class="light-color">Insights</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="text-center">
+              <a href="/assets/pages/More.html" class="text-decoration-none">
+                <img
+                  src="/assets/images/more-tab.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <p class="light-color">More</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
-
-    <footer class="shadow-lg mt-3">
-      <div class="row d-flex justify-content-center pt-3">
-        <div class="col-3">
-          <div class="text-center">
-            <a href="/assets/pages/AddLinks.html" class="text-decoration-none">
-              <img src="/assets/images/link-tab.svg" class="img-fluid" alt="" />
-              <p class="light-color">Links</p>
-            </a>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="text-center">
-            <a
-              href="/assets/pages/ChangeBackground.html"
-              class="text-decoration-none"
-            >
-              <img
-                src="/assets/images/visual-tab.svg"
-                class="img-fluid"
-                alt=""
-              />
-              <p class="light-color">Visuals</p>
-            </a>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="text-center">
-            <a href="/assets/pages/insight.html" class="text-decoration-none">
-              <img
-                src="/assets/images/insight-tab.svg"
-                class="img-fluid"
-                alt=""
-              />
-              <p class="light-color">Insights</p>
-            </a>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="text-center">
-            <a href="/assets/pages/More.html" class="text-decoration-none">
-              <img src="/assets/images/more-tab.svg" class="img-fluid" alt="" />
-              <p class="light-color">More</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
