--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -663,9 +663,7 @@
                     />
                   </div>
                   <div>
-                    <p class="light-color m-0">
-                      Profile customization & control
-                    </p>
+                    <p class="light-color m-0">Profile customization</p>
                   </div>
                 </div>
                 <div class="line"></div>
