--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -87,7 +87,7 @@
                   >
                     <div class="d-flex">
                       <img
-                        src="/assets/images/user.svg"
+                        src="/assets/images/ChangePswd.svg"
                         class="img-fluid"
                         alt=""
                       />
