--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -990,11 +990,12 @@
     >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content modal-border">
-          <div class="modal-body">
+          <div class="modal-body px-4 py-5">
             <p class="px-2 text-center">
-              Your Account has been deleted succesfully !
+              Your Account has been
+              <span class="text-danger">Deleted</span> succesfully !
             </p>
-            <h6 class="text-center">Thank you for using LSVR</h6>
+            <h6 class="text-center pt-2">Thank you for using LSVR</h6>
           </div>
         </div>
       </div>
