--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -89,7 +89,7 @@
                       aria-labelledby="headingOne"
                       data-bs-parent="#accordionExample"
                     >
-                      <div class="accordion-body border-0">
+                      <div class="accordion-body accordian-content border-0">
                         <strong>This is your last 30 days of your data.</strong>
                         The data collected during the last 30 days is typically
                         organized, processed, and presented in a manner that is
