--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -85,7 +85,7 @@
                     </h2>
                     <div
                       id="collapseOne"
-                      class="accordion-collapse collapse show accordian-content"
+                      class="accordion-collapse collapse"
                       aria-labelledby="headingOne"
                       data-bs-parent="#accordionExample"
                     >
