--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -754,7 +754,7 @@
               </div>
             </div>
           </div>
-          <div class="d-flex my-4 mx-1 px-4 gap-2 justify-content-between">
+          <div class="d-flex my-4 px-4 gap-5 justify-content-between">
             <div>
               <a href="./More.html">
                 <button
